# chattymalloc

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  Makefile  README.md  chattymalloc.c  chattyparser.py  meson.build
include/: chattymalloc.h
tools/: check-format
